empty cards json

--- a/src/main/webapp/partials/monopoly-field.html
+++ b/src/main/webapp/partials/monopoly-field.html
@@ -23,7 +23,7 @@
 	<hr />
 	
 	<div class="field">
-		<div ng-repeat="card in cards">card.name</div>
+		<div ng-repeat="card in cards">{{card.name}}</div>
 	</div>
 
 	<div class="chatparticipants">
