--- a/src/main/webapp/partials/monopoly-field.html
+++ b/src/main/webapp/partials/monopoly-field.html
@@ -23,7 +23,15 @@
 	<hr />
 	
 	<div class="field">
-		<div ng-repeat="card in cards">{{card.name}}</div>
+		<div ng-repeat="cell in cells">{{cell["cell-name"]}}</div>
+	</div>
+	
+	<div class="field">
+		<div ng-repeat="card in chance">{{card.description}}</div>
+	</div>
+	
+	<div class="field">
+		<div ng-repeat="card in chest">{{card.description}}</div>
 	</div>
 
 	<div class="chatparticipants">
