Create Game page is changed

--- a/src/main/webapp/partials/create-game.html
+++ b/src/main/webapp/partials/create-game.html
@@ -1,5 +1,6 @@
 
 <div class="container">
-	Game Link: {{gameLink}}
+	<div><a ng-click="createGame()">Create Game</a><div>
+	<div>Game Link: {{gameLink}}<div>
 </div>
 <!-- /container -->
