Fix server logic

--- a/src/main/webapp/partials/create-game.html
+++ b/src/main/webapp/partials/create-game.html
@@ -2,5 +2,7 @@
 <div class="container">
 	<div><a ng-click="createGame()">Create Game</a><div>
 	<div>Game Link: {{gameLink}}<div>
+    <div>Count: {{players.size}}<div>
+            
 </div>
 <!-- /container -->
