--- a/src/main/webapp/partials/monopoly-field.html
+++ b/src/main/webapp/partials/monopoly-field.html
@@ -23,15 +23,97 @@
 	<hr />
 	
 	<div class="field">
-		<div ng-repeat="cell in cells">{{cell["cell-name"]}}</div>
+		<!--<div ng-repeat="cell in cells" style="background:url(images/{{cell.tileName}}.gif) no-repeat;height:184px;width:184px">{{cell["cellName"]}}</div>-->
+		<div class="row">
+			<div class=" tile-square"><img src="images/{{cellsMap[20].tileName}}.gif"></div>
+			<div class=" tile-vertical"><img src="images/{{cellsMap[21].tileName}}.gif"></div>
+			<div class="d-1 tile-vertical"><img src="images/{{cellsMap[22].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[23].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[24].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[25].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[26].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[27].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[28].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[29].tileName}}.gif"></div>
+			<div class="col-md-1 tile-square"><img src="images/{{cellsMap[30].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[19].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[31].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[18].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[32].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[17].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[33].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[16].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[34].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[15].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[35].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[14].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[36].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[13].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[37].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[12].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[38].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[11].tileName}}.gif"></div>
+			<div class="col-md-9">&nbsp;</div>
+			<div class="col-md-1 tile-horizontal"><img src="images/{{cellsMap[39].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1 tile-square"><img src="images/{{cellsMap[10].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[9].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[8].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[7].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[6].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[5].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[4].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[3].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[2].tileName}}.gif"></div>
+			<div class="col-md-1 tile-vertical"><img src="images/{{cellsMap[1].tileName}}.gif"></div>
+			<div class="col-md-1 tile-square"><img src="images/{{cellsMap[0].tileName}}.gif"></div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
 	</div>
 	
 	<div class="field">
-		<div ng-repeat="card in chance">{{card.description}}</div>
+		<div ng-repeat="card in chance" hidden>{{card.description}}</div>
 	</div>
 	
 	<div class="field">
-		<div ng-repeat="card in chest">{{card.description}}</div>
+		<div ng-repeat="card in chest" hidden>{{card.description}}</div>
 	</div>
 	
 	
@@ -62,7 +144,7 @@
 		</ul>
 	</div>
 	<hr/>
-	<form ng:submit="sendMessage()" class="form-inline">
+	<form ng-submit="sendMessage()" class="form-inline">
 		<input type="text" ng-model="message" autofocus="autofocus"/>
 		<button type="button" ng-click="sendMessage()"
 			class="btn btn-default btn-xs">
