--- a/src/main/webapp/partials/create-game.html
+++ b/src/main/webapp/partials/create-game.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-	<button type="button" ng-click="createGame1()"
+	<button type="button" ng-click="createGame()"
 			class="btn btn-default btn-xs">
 Create Game
 		</button>
