--- a/src/main/webapp/partials/monopoly-field.html
+++ b/src/main/webapp/partials/monopoly-field.html
@@ -38,9 +38,29 @@
             <div class="tile-square"><img src="images/{{cellsMap[30].tileName}}.gif"></div>
         </div>
         <div id="row2" class="row">
-            <div class="col-left"></div>
+            <div class="col-left">
+                <div class="tile-horizontal"><img src="images/{{cellsMap[19].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[18].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[17].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[16].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[15].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[14].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[13].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[12].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[11].tileName}}.gif"></div>
+            </div>
             <div class="col-center"></div>
-            <div class="col-right"></div>
+            <div class="col-right">
+                <div class="tile-horizontal"><img src="images/{{cellsMap[31].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[32].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[33].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[34].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[35].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[36].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[37].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[38].tileName}}.gif"></div>
+                <div class="tile-horizontal"><img src="images/{{cellsMap[39].tileName}}.gif"></div>
+            </div>
 
         </div>
         <!--		<div class="row">
