--- a/src/main/webapp/partials/create-game.html
+++ b/src/main/webapp/partials/create-game.html
@@ -5,7 +5,7 @@
 Create Game
 		</button>
 	<div>Game Link: {{gameLink}}<div>
-    <div>Count: {{players.size}}<div>
+    <div>Count: {{count}}<div>
             
 </div>
 <!-- /container -->
