--- a/src/main/webapp/css/grid-view.css
+++ b/src/main/webapp/css/grid-view.css
@@ -23,20 +23,6 @@
 .col-11 {width: 100%;}
 .col-1_64 {width: 14.91%;}
 
-/*div.tile-square {
-    height: 184px;
-    width: 187px;
-}
-div.tile-vertical {
-    height: 184px;
-    width: 114px;
-}
-div.tile-horizontal {
-    height: 114px;
-    width: 187px;
-
-}*/
-
 div.tile-vertical {
     position: relative;
 }
@@ -76,4 +62,35 @@ html, body {
 
 .col-center {
     min-width: 1026px;
+}
+
+.player1 {
+	width: 30px;
+	height: 30px;
+	background: red;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	border-radius: 15px;
+    margin-left:45px;
+	margin-top:40px
+}
+.player2 {
+	width: 30px;
+	height: 30px;
+	background: green;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	border-radius: 15px;
+    margin-left:45px;
+	margin-top:10px
+}
+.player3 {
+	width: 30px;
+	height: 30px;
+	background: blue;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	border-radius: 15px;
+    margin-left:45px;
+	margin-top:10px
 }
